--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="import" href="bower_components/shape-shifter/shape-shifter.html">
 </head>
 <body>
-  <polymer-element name="shifter-demo" touch-action="none">
+  <polymer-element name="shifter-demo" attributes="shape" touch-action="none">
   <template>
     <style>
       #hero {
@@ -42,6 +42,6 @@
     });
   </script>
   </polymer-element>
-  <shifter-demo></shifter-demo>
+  <shifter-demo id='demo'></shifter-demo>
 </body>
 </html>
