--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
   <title></title>
   <script src="bower_components/platform/platform.js"></script>
   <link rel="import" href="bower_components/shape-shifter/shape-shifter.html">
@@ -22,15 +23,15 @@
     </style>
     <div>
       <shape-shifter id="hero" shape="{{ shape }}"></shape-shifter>
-      <shape-shifter on-mouseover="{{ pickShape }}" shape="plus" ></shape-shifter>
-      <shape-shifter on-mouseover="{{ pickShape }}" shape="cancel" ></shape-shifter>
-      <shape-shifter on-mouseover="{{ pickShape }}" shape="check" ></shape-shifter>
-      <shape-shifter on-mouseover="{{ pickShape }}" shape="menu" ></shape-shifter>
-      <shape-shifter on-mouseover="{{ pickShape }}" shape="more" ></shape-shifter>
-      <shape-shifter on-mouseover="{{ pickShape }}" shape="right" ></shape-shifter>
-      <shape-shifter on-mouseover="{{ pickShape }}" shape="left" ></shape-shifter>
-      <shape-shifter on-mouseover="{{ pickShape }}" shape="up" ></shape-shifter>
-      <shape-shifter on-mouseover="{{ pickShape }}" shape="down" ></shape-shifter>
+      <shape-shifter on-tap="{{ pickShape }}" shape="plus" ></shape-shifter>
+      <shape-shifter on-tap="{{ pickShape }}" shape="cancel" ></shape-shifter>
+      <shape-shifter on-tap="{{ pickShape }}" shape="check" ></shape-shifter>
+      <shape-shifter on-tap="{{ pickShape }}" shape="menu" ></shape-shifter>
+      <shape-shifter on-tap="{{ pickShape }}" shape="more" ></shape-shifter>
+      <shape-shifter on-tap="{{ pickShape }}" shape="right" ></shape-shifter>
+      <shape-shifter on-tap="{{ pickShape }}" shape="left" ></shape-shifter>
+      <shape-shifter on-tap="{{ pickShape }}" shape="up" ></shape-shifter>
+      <shape-shifter on-tap="{{ pickShape }}" shape="down" ></shape-shifter>
     </div>
   </template>
   <script>
