--- a/index.html
+++ b/index.html
@@ -1,48 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-  <title></title>
-  <script src="bower_components/platform/platform.js"></script>
-  <link rel="import" href="bower_components/shape-shifter/shape-shifter.html">
-</head>
-<body>
-  <polymer-element name="shifter-demo" attributes="shape" touch-action="none">
-  <template>
-    <style>
-      #hero {
-        display: block;
-        margin: 30px auto;
-        width: 300px;
-        height: 300px;
-      }
-      shape-shifter {
-        display: inline-block;
-      }
-    </style>
-    <div>
-      <shape-shifter id="hero" shape="{{ shape }}"></shape-shifter>
-      <shape-shifter on-tap="{{ pickShape }}" shape="plus" ></shape-shifter>
-      <shape-shifter on-tap="{{ pickShape }}" shape="cancel" ></shape-shifter>
-      <shape-shifter on-tap="{{ pickShape }}" shape="check" ></shape-shifter>
-      <shape-shifter on-tap="{{ pickShape }}" shape="menu" ></shape-shifter>
-      <shape-shifter on-tap="{{ pickShape }}" shape="more" ></shape-shifter>
-      <shape-shifter on-tap="{{ pickShape }}" shape="right" ></shape-shifter>
-      <shape-shifter on-tap="{{ pickShape }}" shape="left" ></shape-shifter>
-      <shape-shifter on-tap="{{ pickShape }}" shape="up" ></shape-shifter>
-      <shape-shifter on-tap="{{ pickShape }}" shape="down" ></shape-shifter>
-    </div>
-  </template>
-  <script>
-    Polymer('shifter-demo', {
-      shape: 'plus',
-      pickShape: function(e, target, sender) {
-        this.shape = sender.shape;
-      }
-    });
-  </script>
-  </polymer-element>
-  <shifter-demo id='demo'></shifter-demo>
-</body>
-</html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
+        <title></title>
+        <script src="bower_components/platform/platform.js"></script>
+        <link rel="import" href="bower_components/shape-shifter/shape-shifter.html">
+    </head>
+    <body>
+        <polymer-element name="shifter-demo" attributes="shape" touch-action="none">
+        <template>
+        <style>
+            #hero {
+                display: block;
+                margin: 30px auto;
+                width: 300px;
+                height: 300px;
+            }
+            shape-shifter {
+                display: inline-block;
+            }
+        </style>
+        <div>
+            <shape-shifter id="hero" shape="{{ shape }}"></shape-shifter>
+            <div id="buttons">
+                <shape-shifter on-tap="{{ pickShape }}" shape="plus" ></shape-shifter>
+                <shape-shifter on-tap="{{ pickShape }}" shape="cancel" ></shape-shifter>
+                <shape-shifter on-tap="{{ pickShape }}" shape="check" ></shape-shifter>
+                <shape-shifter on-tap="{{ pickShape }}" shape="menu" ></shape-shifter>
+                <shape-shifter on-tap="{{ pickShape }}" shape="more" ></shape-shifter>
+                <shape-shifter on-tap="{{ pickShape }}" shape="right" ></shape-shifter>
+                <shape-shifter on-tap="{{ pickShape }}" shape="left" ></shape-shifter>
+                <shape-shifter on-tap="{{ pickShape }}" shape="up" ></shape-shifter>
+                <shape-shifter on-tap="{{ pickShape }}" shape="down" ></shape-shifter>
+            </div>
+        </div>
+        </template>
+        <script>
+            Polymer('shifter-demo', {
+                shape: 'plus',
+                pickShape: function(e, target, sender) {
+                    this.shape = sender.shape;
+                }
+                });
+            </script>
+            </polymer-element>
+            <shifter-demo id='demo'></shifter-demo>
+            <script>
+                var loaded;
+                window.addEventListener('polymer-ready', function(e) {
+                    loaded = true;
+                    });
+                })
+            </script>
+        </body>
+    </html>
