start with no shape selected

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </template>
         <script>
             Polymer('shifter-demo', {
-                shape: 'plus',
+                shape: null,
                 pickShape: function(e, target, sender) {
                     this.shape = sender.shape;
                 }
